--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 body {
   font-family: "Crimson Text", serif;
   color: #222;
-  line-height: 1.3;
+  line-height: 1.3rem;
   margin: auto;
   padding-left: 1rem;
   padding-right: 1rem;
