--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-  borderbox: 2px;
   color: #222;
 }
 
@@ -12,25 +11,29 @@ body {
   font-family: "Crimson Text", serif;
   color: #222;
   line-height: 1.3rem;
-  margin: auto;
   padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 1rem;
+  margin: 5px;
+  font-size: 1em;
 }
 
-h1 {
+article header {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #555;
+}
+
+article h1 {
   font-size: 1.5rem;
-  line-height: 0rem;
+  line-height: 1em;
   font-style: normal;
   font-weight: normal;
 }
 
-h1 + p {
+article header p {
   font-style: italic;
   font-weight: lighter;
   width: auto;
-  border-bottom: 1px solid #222;
-  padding-bottom: 20px;
 }
 
 blockquote {
@@ -40,7 +43,7 @@ blockquote {
   font-style: normal;
 }
 
-ol {
+article ol {
   padding-left: 15px;
 }
 
